add side bar responsive  v1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@ INCLUDE STYLES AND COMPONENTS
 /* ================== HELPERS =================== */
 
 body {
-  background-color: #000;
+  background-color: #dddddd;
 }
 .table thead th {
   color: #adb5bd;
